# DeepFaultLocalization

./: .gitignore  .install_dep.sh.swp  10fold.sh  LICENSE  README.md  bidirectional_rnn.py  fc_based.py  fc_based_1.py  fc_based_2.py  input.py  install_dep.sh  main.py  multilayer_perceptron_two_hidden_layer.py  multiple_run.sh  nohup.out  one_click_closure.sh  plot.py  quick_closure.sh  rank_parser.py  recurrent_network.py  run_deepfl.sh  times_run.sh  tree_report.txt
FeatureExtraction/UsefulTools/indri-5.11/: INSTALL  LICENSE.txt  MakeDefns  MakeDefns.in  Makefile  Makefile.app  Makefile.app.in  README  Timelog.txt  config.status  configure  configure.ac  indri-VS2010.sln  indri-VS2012.sln
FeatureExtraction/UsefulTools/indri-5.11/buildindex/: IndriBuildIndex.cpp  Makefile  buildindex-VS2010.vcxproj  buildindex-VS2010.vcxproj.filters  buildindex-VS2012.vcxproj
FeatureExtraction/UsefulTools/indri-5.11/clarity/: Makefile  clarity-VS2010.vcxproj  clarity-VS2010.vcxproj.filters  clarity-VS2012.vcxproj  clarity.cpp
FeatureExtraction/UsefulTools/indri-5.11/contrib/: Makefile
FeatureExtraction/UsefulTools/indri-5.11/contrib/antlr/: README.antlr
FeatureExtraction/UsefulTools/indri-5.11/contrib/xpdf/: README.xpdf
FeatureExtraction/UsefulTools/indri-5.11/contrib/zlib/: README.zlib
FeatureExtraction/UsefulTools/indri-5.11/depend/: AnchorTextHarvester.d  Annotator.d  ArabicStemmerTransformation.d  Arabic_Stemmer_utf8.d  BooleanAndNode.d  BulkTree.d  CachedFrequencyBeliefNode.d  CombinedVocabularyIterator.d  Combiner.d  CompressedCollection.d  ContextCountAccumulator.d  ContextInclusionAndNode.d  ContextSimpleCountAccumulator.d  Copier.d  DeletedDocumentList.d  DirectoryIterator.d  DiskDocExtentListIterator.d  DiskDocListFileIterator.d  DiskDocListIterator.d  DiskDocumentDataIterator.d  DiskFrequentVocabularyIterator.d  DiskIndex.d  DiskKeyfileVocabularyIterator.d  DiskTermListFileIterator.d  DocExtentListMemoryBuilder.d  DocExtentListMemoryBuilderIterator.d  DocListIteratorNode.d  DocListMemoryBuilder.d  DocListMemoryBuilderIterator.d  DocumentIteratorFactory.d  DocumentStructure.d  DocumentStructureHolderNode.d  DocumentVector.d  ExtentAndNode.d  ExtentChildNode.d  ExtentDescendantNode.d  ExtentEnforcementNode.d  ExtentInsideNode.d  ExtentOrNode.d  ExtentParentNode.d  (+105 more)
FeatureExtraction/UsefulTools/indri-5.11/doc/: IndriQueryLanguage.html  Makefile  config  main.css
FeatureExtraction/UsefulTools/indri-5.11/dumpindex/: Makefile  dumpindex-VS2010.vcxproj  dumpindex-VS2012.vcxproj  dumpindex-VS2012.vcxproj.filters  dumpindex.cpp
FeatureExtraction/UsefulTools/indri-5.11/harvestlinks/: Makefile  harvestlinks-VS2010.vcxproj  harvestlinks-VS2010.vcxproj.filters  harvestlinks-VS2012.vcxproj  harvestlinks.cpp
FeatureExtraction/UsefulTools/indri-5.11/include/indri/: AnchorTextAnnotator.hpp  AnchorTextHarvester.hpp  AnchorTextWriter.hpp  Annotator.hpp  Appliers.hpp  ArabicStemmerTransformation.hpp  Arabic_Stemmer_utf8.hpp  AttributeValuePair.hpp  BeliefNode.hpp  BooleanAndNode.hpp  Buffer.hpp  BulkTree.hpp  CachedFrequencyBeliefNode.hpp  Collection.hpp  CombinedVocabularyIterator.hpp  Combiner.hpp  CompressedCollection.hpp  ConditionVariable.hpp  Conflater.hpp  ConflationPattern.hpp  ContextCountAccumulator.hpp  ContextCountGraphCopier.hpp  ContextCountGraphExtractor.hpp  ContextInclusionAndNode.hpp  ContextSimpleCountAccumulator.hpp  ContextSimpleCountCollectorCopier.hpp  Copier.hpp  CorpusStatistics.hpp  DagCopier.hpp  DateFieldAnnotator.hpp  DateParse.hpp  DeletedDocumentList.hpp  DirectoryIterator.hpp  DirichletTermScoreFunction.hpp  DiskDocExtentListIterator.hpp  (+218 more)
FeatureExtraction/UsefulTools/indri-5.11/indrid/: IndriDaemon.cpp  Makefile  indrid-VS2010.vcxproj  indrid-VS2012.vcxproj  indrid-VS2012.vcxproj.filters
FeatureExtraction/UsefulTools/indri-5.11/makeprior/: Makefile  makeprior-VS2010.vcxproj  makeprior-VS2012.vcxproj  makeprior-VS2012.vcxproj.filters  makeprior.cpp
FeatureExtraction/UsefulTools/indri-5.11/modifyfields/: Makefile  ModifyFields-VS2010.vcxproj  ModifyFields-VS2012.vcxproj  ModifyFields-VS2012.vcxproj.filters  ModifyFields.cpp
FeatureExtraction/UsefulTools/indri-5.11/pagerank/: Makefile  pagerank-VS2010.vcxproj  pagerank-VS2010.vcxproj.filters  pagerank-VS2012.vcxproj  pagerank.cpp
FeatureExtraction/UsefulTools/indri-5.11/reformulate/: Makefile  ReformulateQuery.cpp
FeatureExtraction/UsefulTools/indri-5.11/rmodel/: Makefile  rmodel-VS2010.vcxproj  rmodel-VS2012.vcxproj  rmodel-VS2012.vcxproj.filters  rmodel.cpp
FeatureExtraction/UsefulTools/indri-5.11/runquery/: IndriRunQuery.cpp  Makefile  runquery-VS2010.vcxproj  runquery-VS2010.vcxproj.filters  runquery-VS2012.vcxproj
FeatureExtraction/UsefulTools/indri-5.11/site-search/: Makefile  README  build.param  build.param.in  crawl-index  crawl-index.in  excluded_hosts.in  order.xml  seeds.txt  seeds.txt.in  stopwords
FeatureExtraction/UsefulTools/indri-5.11/src/: AnchorTextHarvester.cpp  Annotator.cpp  ArabicStemmerTransformation.cpp  Arabic_Stemmer_utf8.cpp  BooleanAndNode.cpp  BulkTree.cpp  CachedFrequencyBeliefNode.cpp  CombinedVocabularyIterator.cpp  Combiner.cpp  CompressedCollection.cpp  ContextCountAccumulator.cpp  ContextInclusionAndNode.cpp  ContextSimpleCountAccumulator.cpp  Copier.cpp  DeletedDocumentList.cpp  DirectoryIterator.cpp  DiskDocExtentListIterator.cpp  DiskDocListFileIterator.cpp  DiskDocListIterator.cpp  DiskDocumentDataIterator.cpp  DiskFrequentVocabularyIterator.cpp  DiskIndex.cpp  DiskKeyfileVocabularyIterator.cpp  DiskTermListFileIterator.cpp  DocExtentListMemoryBuilder.cpp  DocExtentListMemoryBuilderIterator.cpp  DocListIteratorNode.cpp  DocListMemoryBuilder.cpp  DocListMemoryBuilderIterator.cpp  DocumentIteratorFactory.cpp  DocumentStructure.cpp  DocumentStructureHolderNode.cpp  DocumentVector.cpp  ExtentAndNode.cpp  ExtentChildNode.cpp  ExtentDescendantNode.cpp  ExtentEnforcementNode.cpp  ExtentInsideNode.cpp  ExtentOrNode.cpp  ExtentParentNode.cpp  (+112 more)
FeatureExtraction/UsefulTools/indri-5.11/swig/: swig-VS2010.vcxproj  swig-VS2012.vcxproj  swig-VS2012.vcxproj.filters
(+815 files in other folders)
